inst/components/sidebar.scss
$bslib-sidebar-padding: $spacer * 1.5 !default;
$bslib-sidebar-icon-size: $spacer !default;
// This is a "mandatory" border; whereas, --bslib-sidebar-border is "optional"
$bslib-sidebar-separator: $border-width $border-style $border-color !default;
$bslib-sidebar-transition: grid-template-columns ease-in-out 0.5s !default;

.bslib-sidebar-layout {
  --bslib-collapse-toggle-transform: 90deg;
  --bslib-sidebar-bg: #{$card-bg};
  --bslib-sidebar-main-bg: #{$card-bg};

  display: grid;
  grid-template-columns: var(--bslib-sidebar-width) minmax(0, 1fr);
  @include transition($bslib-sidebar-transition);
  position: relative;

  border: var(--bslib-sidebar-border);
  border-radius: var(--bslib-sidebar-border-radius);

  > .main, .sidebar {
    overflow: auto;
  }

  > .sidebar {
    padding: $bslib-sidebar-padding;
    width: var(--bslib-sidebar-width);
    border-right: $bslib-sidebar-separator;
    border-top-left-radius: inherit;
    border-bottom-left-radius: inherit;
    background-color: var(--bslib-sidebar-bg);
    display: flex;
    flex-direction: column;

    > .accordion {
      margin: - $bslib-sidebar-padding;
      @extend .accordion-flush;
      .accordion-body {
        display: flex;
        flex-direction: column;
      }
    }

    .shiny-input-container {
      width: 100%;
    }
  }

  > .main {
    padding: $bslib-sidebar-padding;
    z-index: 1; // Make sure main content is on top of sidebar during transition
    border-top-right-radius: inherit;
    border-bottom-right-radius: inherit;
    background-color: var(--bslib-sidebar-main-bg);
  }

  > .collapse-toggle {
    grid-row: 1 / 2;
    grid-column: 1 / 2;
    position: absolute;
    right: -$bslib-sidebar-icon-size;
    bottom: $bslib-sidebar-padding;
    display: inline-flex;
    align-items: center;
    border: $bslib-sidebar-separator;
    border-left: none;
    border-radius: 0 $border-radius $border-radius 0;
    z-index: $zindex-tooltip;
    padding: 4px 0;

    &::after {
      width: $bslib-sidebar-icon-size;
      height: $bslib-sidebar-icon-size;
      content: "";
      background-image:  #{escape-svg($accordion-button-icon)};
      background-repeat: no-repeat;
      background-size: $bslib-sidebar-icon-size;
      transform: rotate(var(--bslib-collapse-toggle-transform));
      opacity: 0.65;
      // N.B. since mobile view won't trigger a transition of grid-template-columns,
      // we transition this toggle to ensure _some_ transition event always happens
      transition: transform ease-in-out 0.35s;
    }

    &:hover:after {
      opacity: 1;
    }
  }

  &.sidebar-collapsed {
    grid-template-columns: 0px minmax(0, 1fr);

    > .main {
      border-radius: var(--bslib-sidebar-border-radius);
    }

    > .collapse-toggle {
      --bslib-collapse-toggle-transform: -90deg;
    }
  }

  // Hide the sidebar contents after it's done transitioning so that
  // those contents don't impact the overall layout (i.e., height)
  &.sidebar-collapsed:not(.transitioning) {
    // Putting `display:none` on .sidebar would change the number of columns
    // in the grid, and I don't think we can transition between those states
    .sidebar > * {
      display:none;
    }
  }

  &.full-bleed {
    --bslib-sidebar-bg: #{$body-bg};
    --bslib-sidebar-main-bg: #{$body-bg};

    position: fixed;
    inset: var(--bslib-sidebar-full-bleed-inset, 0);
  }

}

// TODO: transition between collapse states on mobile?
@include media-breakpoint-down(sm) {
  .bslib-sidebar-layout {
    grid-template-columns: 1fr;
    --bslib-collapse-toggle-transform: -180deg;

    // Override `full_bleed=T`'s position:fixed, so that sidebar can be scrolled sensibly
    &.full-bleed {
      position: relative !important;
      inset: var(--bslib-sidebar-full-bleed-inset, 0) !important;
    }

    > .sidebar {
      width: 100%;
      border-bottom: $bslib-sidebar-separator;
      border-right: none;
      border-top-right-radius: var(--bslib-sidebar-border-radius);
      border-bottom-left-radius: 0;
    }

    > .main {
      border-top-right-radius: 0;
      border-bottom-left-radius: var(--bslib-sidebar-border-radius);
      border-bottom-right-radius: var(--bslib-sidebar-border-radius);
    }

    > .collapse-toggle {
      bottom: - $bslib-sidebar-icon-size;
      right: $bslib-sidebar-padding;
      border-top: none;
      border-left: $bslib-sidebar-separator;
      border-radius: 0 0 $border-radius $border-radius;
      padding: 0 4px;
    }

    &.sidebar-collapsed {
      > .collapse-toggle {
        --bslib-collapse-toggle-transform: 0deg;
        // Assuming the grid-template-columns from non-mobile .collapsed has precedence
        grid-column: 2 / 3;
        top: 0;
        bottom: initial;
      }
    }

    &.sidebar-collapsed.full-bleed {
      > .main {
        border-top: $bslib-sidebar-separator;
      }
    }
  }
}

